--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "phpunit/phpunit": "^10.3.2",
         "spatie/laravel-ignition": "^2.2",
         "squizlabs/php_codesniffer": "3.7.2",
-        "phpstan/phpstan": "^1.10.29"
+        "phpstan/phpstan": "^1.10.29",
+        "phpmd/phpmd" : "@stable"
     },
     "autoload": {
         "psr-4": {
@@ -58,6 +59,9 @@
         ],
         "phpstan": [
             "./vendor/bin/phpstan analyse"
+        ],
+        "phpmd": [
+            "./vendor/bin/phpmd modules,app text unusedcode codesize naming,phpmd.xml"
         ]
 
     },
