--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.7.0",
         "laravel/framework": "^10.19",
-        "laravel/sanctum": "^3.2.5",
+        "laravel/sanctum": "^3.2.6",
         "laravel/tinker": "^2.8.1",
         "prettus/l5-repository": "^2.9"
     },
@@ -21,7 +21,7 @@
         "phpunit/phpunit": "^10.3.2",
         "spatie/laravel-ignition": "^2.2",
         "squizlabs/php_codesniffer": "3.7.2",
-        "phpstan/phpstan": "^1.10.29",
+        "phpstan/phpstan": "^1.10.30",
         "phpmd/phpmd" : "@stable"
     },
     "autoload": {
@@ -54,7 +54,7 @@
         "phpcs": [
             "./vendor/bin/phpcs --standard=phpcs.xml ./ -d error_reporting=E_ALL~E_DEPRECATED"
         ],
-        "phpcbf": [
+        "phpbf": [
             "./vendor/bin/phpcbf --standard=phpcs.xml ./ -d error_reporting=E_ALL~E_DEPRECATED"
         ],
         "phpstan": [
