--- a/composer.json
+++ b/composer.json
@@ -7,22 +7,23 @@
     "require": {
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.8.0",
-        "laravel/framework": "^10.21",
+        "laravel/framework": "^10.22",
         "laravel/sanctum": "^3.3.0",
         "laravel/tinker": "^2.8.2",
         "prettus/l5-repository": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
-        "laravel/pint": "^1.12",
-        "laravel/sail": "^1.24",
+        "laravel/pint": "^1.13",
+        "laravel/sail": "^1.24.1",
+        "laravel/telescope": "^4.16",
         "mockery/mockery": "^1.6.6",
         "nunomaduro/collision": "^7.8.1",
-        "phpunit/phpunit": "^10.3.2",
-        "spatie/laravel-ignition": "^2.3",
-        "squizlabs/php_codesniffer": "3.7.2",
+        "phpmd/phpmd": "@stable",
         "phpstan/phpstan": "^1.10.33",
-        "phpmd/phpmd" : "@stable"
+        "phpunit/phpunit": "^10.3.3",
+        "spatie/laravel-ignition": "^2.3",
+        "squizlabs/php_codesniffer": "3.7.2"
     },
     "autoload": {
         "psr-4": {
